# seam

./: .gitignore  .prettierrc.toml  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  TODO.md  all.py  bilibili.py  build.gradle  chushou.py  config.json  config.toml  configframe.py  douyin.py  douyu.py  egame.py  frame.py  huajiao.py  huomao.py  huya.py  iqiyi.py  justfile  kuaishou.py  kugou.py  longzhu.py  now.py  pom.xml  pps.py  rebel.xml  requirements.txt  settings.gradle  tMain.py  tMain.spec  v6cn.py  wangyicc.py  xigua.py  yingke.py  yizhibo.py  (+2 more)
.github/workflows/: release.yml  release_cli.yml  release_gui.yml  rust-clippy.yml
borber-common/src/main/java/com/borber/common/core/response/: BaseResponse.java
config/: config.json
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: common.rs  config.rs  declarative.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: common.rs  error.rs  lib.rs  util.rs
crates/core/src/live/: afreeca.rs  bili.rs  cc.rs  douyin.rs  douyu.rs  flex.rs  huajiao.rs  huya.rs  inke.rs  kk.rs  ks.rs  mht.rs  mod.rs  now.rs  panda.rs  qf.rs  twitch.rs  wink.rs  yqs.rs
crates/danmu/: Cargo.toml
crates/danmu/src/: lib.rs
crates/danmu/src/danmu/: douyin.rs  mod.rs
crates/gui/: .eslintrc.json  CHANGELOG.md  README.md  index.html  package.json  vite.config.ts
crates/gui/src/: App.css  App.tsx  index.tsx  styles.css
crates/gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/gui/src-tauri/icons/: icon.icns
crates/gui/src-tauri/src/: common.rs  config.rs  main.rs  resp.rs  setup.rs  util.rs
crates/gui/src-tauri/src/command/: live.rs  mod.rs  refresh.rs  subscribe.rs
crates/gui/src-tauri/src/common/: mod.rs
crates/gui/src-tauri/src/database/: mod.rs  subscribe.rs
crates/gui/src-tauri/src/manager/: mod.rs  refresh.rs
crates/gui/src-tauri/src/service/: mod.rs  subscribe.rs
crates/gui/src/components/: Bar.tsx  Control.tsx  GoodItem.tsx  Live.tsx  Panel.tsx  SideBar.tsx  SideItem.tsx  SilderItem.tsx  TopBar.tsx
crates/gui/src/css/: Bar.css  Chart.css  Control.css  Good.css  GoodItem.css  Home.css  Live.css  Panel.css  Setting.css  SideBar.css  SideItem.css  SilderItem.css  TopBar.css
crates/gui/src/icon/: icon.tsx
crates/gui/src/model/: Live.tsx  Record.tsx  Resp.tsx
crates/gui/src/pages/: Chart.tsx  Good.tsx  Home.tsx  Setting.tsx
crates/marcos/: Cargo.toml
crates/status/: Cargo.toml
crates/status/src/: common.rs  lib.rs
doc/: 配置说明.md  额外安装.md
m3u/: BORBER.m3u
sbtream-api/: build.gradle  settings.gradle
sbtream-common/: pom.xml
sbtream-common/src/main/java/com/borber/sbtream/common/response/: BaseResponse.java
sbtream-plugin/: pom.xml
sbtream-plugin-demo-bili/: build.gradle
sbtream-plugin/src/main/java/com/borber/sbtream/plugin/annotations/: Plugin.java
sbtream-plugin/src/main/java/com/borber/sbtream/plugin/api/: Api.java
sbtream-plugin/src/main/java/com/borber/sbtream/plugin/constans/: PluginConstans.java  StatusType.java
sbtream-plugin/src/main/java/com/borber/sbtream/plugin/model/: DataDTO.java  MetaDataDTO.java  PlatformDTO.java  UrlDTO.java
sbtream-plugin/src/main/java/com/borber/sbtream/plugin/util/: JsUtil.java  RequestUtil.java
sbtream-server/: .gitignore  build.gradle  gradlew  pom.xml  settings.gradle
sbtream-server/src/main/java/com/borber/sbtream/server/: SbtreamServerApplication.java
sbtream-server/src/main/java/com/borber/sbtream/server/conf/: GlobalCorsConfig.java  InterceptorConfig.java  MyMetaObjectConfiguration.java  MybatisConfiguration.java
sbtream-server/src/main/java/com/borber/sbtream/server/constans/: SBtreamConfigConstans.java
sbtream-server/src/main/java/com/borber/sbtream/server/controller/: FocusController.java  PlatformController.java  PluginController.java  SBtreamController.java  UserController.java
sbtream-server/src/main/java/com/borber/sbtream/server/mapper/: AdminMapper.java  AnchorMapper.java  CookieMapper.java  PlatformMapper.java  PluginMapper.java  RecordHistoryMapper.java  UserMapper.java  UserfocusMapper.java  UserfocusRecordMapper.java  WatchHistoryMapper.java
sbtream-server/src/main/java/com/borber/sbtream/server/service/: AdminService.java  AnchorService.java  CookieService.java  (+8 more)
sbtream-server/src/main/resources/: application-local.yml  application.yml
sbtream-server/src/main/resources/mapper/: AdminMapper.xml  AnchorMapper.xml  CookieMapper.xml  PlatformMapper.xml  PluginMapper.xml  RecordHistoryMapper.xml  UserMapper.xml  UserfocusMapper.xml  UserfocusRecordMapper.xml  WatchHistoryMapper.xml
sbtream-server/src/test/java/com/borber/sbtream/server/: SbtreamServerApplicationTests.java
script/: gui_version.lua  update_gui.nu  update_gui.ps1
seam/: Cargo.toml
seam/src/: common.rs  config.rs  declarative.rs  main.rs
seam_cli_marcos/: Cargo.toml
seam_cli_marcos/src/: lib.rs
seam_core/: Cargo.toml
seam_core/src/: common.rs  config.rs  error.rs  lib.rs  recorder.rs  util.rs
seam_core/src/live/: afreeca.rs  bili.rs  cc.rs  douyin.rs  douyu.rs  flex.rs  huajiao.rs  huya.rs  inke.rs  kk.rs  ks.rs  kuaishou.rs  mht.rs  mod.rs  now.rs  panda.rs  qf.rs  wink.rs  yqs.rs
seam_core_marcos/: Cargo.toml
seam_core_marcos/src/: lib.rs
seam_danmu/: Cargo.toml
seam_danmu/src/: afreeca.rs  bili.rs  error.rs  flex.rs  lib.rs  mht.rs
seam_danmu/src/danmu/: bili.rs  cc.rs  huajiao.rs  huya.rs  inke.rs  mod.rs  now.rs  qf.rs  wink.rs
seam_danmu/src/live/: bili.rs  douyin.rs  kk.rs  ks.rs  panda.rs  yqs.rs
seam_status/: Cargo.toml
seam_status/src/: bili.rs  cc.rs  error.rs  lib.rs
seam_status/src/live/: bili.rs
seam_status/src/status/: bili.rs  cc.rs  douyin.rs  mod.rs
src/: common.rs  config.rs  danmu.rs  declarative.rs  main.rs  model.rs  modle.rs  recorder.rs  util.rs
src/danmu/: bili.rs  mod.rs
src/live/: afreeca.rs  bili.json  bili.rs  bilibili.rs  cc.rs  douyin.rs  douyu.rs  flex.rs  huajiao.rs  huya.rs  inke.rs  kk.rs  kuaishou.rs  mht.rs  mht_2cq.rs  mod.rs  now.rs  panda.rs  qf.rs  wink.rs  yqs.rs  yqs_173.rs
src/show/: bilibili.rs  mht_2cq.rs  mod.rs  yqs_173.rs
(+43 files in other folders)
