[package]
name = "seam"
version = "0.1.15"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
urlencoding = "2.1.2"
chrono = "0.4.23"
md-5 = "0.10.5"
hex = "0.4.3"
once_cell = "1"
paste = "1.0"
async-trait = "0.1.61"
rand = "0.8.5"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
futures-sink = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
miniz_oxide = "0.6.2"
colored = "2.0.0"
openssl = { version = '0.10', features = ["vendored"] }