[package]
name = "seam"
authors = ["Borber"]
version = "0.1.26"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "deflate"] }
regex = "1"
clap = { version = "4", features = ["derive"] }
urlencoding = "2"
chrono = "0.4"
md-5 = "0.10"
hex = "0.4"
once_cell = "1"
paste = "1.0"
async-trait = "0.1"
rand = "0.8.5"
tokio-tungstenite = { version = "0.18", features = ["native-tls"] }
futures-sink = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
miniz_oxide = "0.7"
colored = "2.0"

[target.'cfg(unix)'.dependencies]
openssl = { version = '0.10', features = ["vendored"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"
