[package]
name = "seam"
authors = ["Borber"]
version = "0.1.28"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seam_cli_marcos = { path = "../seam_cli_marcos" }
seam_core = { path = "../seam_core" }
seam_danmu = { path = "../seam_danmu" }
seam_status = { path = "../seam_status" }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
paste = "1.0"
chrono = "0.4"
