[package]
name = "seam_core"
version = "0.1.19"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip", "deflate"] }
regex = "1"
urlencoding = "2"
chrono = "0.4"
md-5 = "0.10"
hex = "0.4"
once_cell = "1"
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
openssl = { version = '0.10', features = ["vendored"] }

[dev-dependencies]
macros = { package = "seam_core_marcos", path = "../seam_core_marcos" }
