[package]
name = "seam_danmu"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seam_status = { path = "../seam_status" }
thiserror = "1"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
futures-sink = "0.3"
futures-util = { version = "0.3", default-features = false, features = [
    "sink",
    "std",
] }
miniz_oxide = "0.7"
colored = "2"
rand = "0.8"
async-trait = "0.1"
paste = "1.0"
