[package]
name = "seam_status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
once_cell = "1"
async-trait = "0.1"

[target.'cfg(unix)'.dependencies]
openssl = { version = '0.10', features = ["vendored"] }
