[package]
name = "seam"
authors = ["Borber"]
version = "0.1.29"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
seam_core = { path = "../core" }
seam_danmu = { path = "../danmu" }
seam_status = { path = "../status" }

anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
once_cell = "1"
serde = { version = "1", features = ["derive"] }
basic-toml = "0.1"
parking_lot = { version = "0.12", features = ["nightly"] }
