[package]
name = "seam_gui"
version = "0.1.1"
description = "seam"
authors = ["Borber"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [
    "window-show",
    "window-minimize",
    "window-close",
    "window-maximize",
    "shell-open",
    "window-start-dragging",
] }

tokio = { version = "*", features = ["full"] }

anyhow = "1"
once_cell = "1"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
basic-toml = "0.1"

window-shadows = "0.2"

seam_core = { path = "../../core" }


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(unix)'.dependencies]
openssl = { version = '0.10', features = ["vendored"] }
